# PhoneX_iOS

./: .gitignore  .gitmodules  EnterpriseInstallationGuide.txt  GoogleService-Info.plist  PhonexObfuscated-Info.plist  PodCurrent.txt  Podfile  README.md  obfuscate_project  phoenix.wsdl  wordcount.py
Phonex/: Phonex-Info.plist  Phonex-Prefix.pch  Phonex.entitlements  main.m
Phonex.xcodeproj/: project.pbxproj
Phonex.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Phonex.xcodeproj/project.xcworkspace/xcshareddata/: Phonex.xccheckout
Phonex.xcodeproj/project.xcworkspace/xcuserdata/eldred.xcuserdatad/: UserInterfaceState.xcuserstate
Phonex/Base.lproj/: Main_iPhone.storyboard
Phonex/Resource/: Launch Screen alt.xib  Launch Screen.xib
Phonex/Resource/Crypto/: trust-ca.pem  trust-expired.pem  trust-web.pem
Phonex/Resource/Dimensions/: iphone.plist
Phonex/Resource/Images.xcassets/AppIcon.appiconset/: Contents.json
Phonex/Resource/Images.xcassets/LaunchImage.launchimage/: Contents.json
Phonex/Resource/Sound/Notifications/: vibration.caf  (+4 more)
Phonex/Resource/Strings/: Unlocalized.strings  characterCounter.sh  csvExporter.sh  csvImportCleaner.sh  csvImporter.sh
Phonex/Resource/Theme/: colors.plist
Phonex/Resource/Values/: independent_values.plist  portrait.plist
Phonex/Source/: PEXAppDelegate.h  PEXAppDelegate.m
Phonex/Source/Core/: PEXBase.h  PEXBase.m  PEXCodes.h  PEXCodes.m  PEXCore.h  PEXRegisterable.h  PEXServiceConstants.h  PEXServiceConstants.m  PEXSystemUtils.h  PEXSystemUtils.m
Phonex/Source/Gui/: AnimatedHorizontalPannerStub.h  AnimationOnClickStub.h  DisableableStub.h  PEXGuiBlockGestureRecognizer.m  PEXGuiClickInterface.h  PEXGuiController.h  PEXGuiController.m  PEXGuiControllerDecorator.h  PEXGuiControllerDecorator.m  PEXGuiControllerDecorator_Protected.h  PEXGuiControllerStackManager.h  PEXGuiControllerStackManager.m  PEXGuiController_Protected.h  PEXGuiExecutor.h  PEXGuiExecutor.m  PEXGuiFactory.h  PEXGuiFactory.m  PEXGuiHorizontalPanRecognizerHelper.h  PEXGuiHorizontalPanRecognizerHelper.m  PEXGuiKeyboardHolder.h  PEXGuiKeyboardHolder.m  PEXGuiLooseController.h  PEXGuiLooseController.m  PEXGuiStateChanger.h  PEXGuiTrackingController.h  PEXGuiTrackingController.m  PEXGuiUtils.h  PEXGuiUtils.m  PEXUnmanagedObjectHolder.h  PEXUnmanagedObjectHolder.m  TitleAttributes.h  UIViewController+PEXRelayout.h  UIViewController+PEXRelayout.m
Phonex/Source/Resource/: NSBundle+PEXResCrypto.h  NSBundle+PEXResCrypto.m  PEXResColors.h  PEXResColors.m  PEXResColors_JustOnce.h  PEXResCrypto.h  PEXResCrypto.m  PEXResImages.h  PEXResImages.m  PEXResSounds.h  PEXResSounds.m  PEXResStrings.h  PEXResStrings.m  PEXResStrings_JustOnce.h  PEXResValues.h  PEXResValues.m  PEXResValues_JustOnce.h  PEXTheme.h  PEXTheme.m  PEXTheme_JustOnce.h
Phonex/Source/Specific/: PEXAppState.h  PEXAppState.m  PEXControllerManager.h  PEXControllerManager.m  PEXControllerManager_Protected.h  PEXDateUtils.h  PEXDateUtils.m  PEXGuiAppUtils.h  PEXGuiAppUtils.m  PEXGuiBusyInputController.h  PEXGuiBusyInputController.m  PEXGuiBusyInputController_Protected.h  PEXGuiContentLoaderController.h  PEXGuiContentLoaderController.m  PEXGuiContentLoaderController_Protected.h  PEXGuiControllerContentObserver.h  PEXGuiControllerContentObserver.m  PEXGuiControllerContentObserver_Protected.h  PEXGuiDeleteItemView.h  PEXGuiDeleteItemView.m  PEXGuiPhonexCheckBox.h  PEXGuiPhonexCheckBox.m  PEXGuiStatementView.h  PEXGuiStatementView.m  PEXPhonexSettings.h  PEXPhonexSettings.m  PEXReferenceTimeManager.h  PEXReferenceTimeManager.m  PEXUser.h  PEXUser.m  PEXUserPrivate.h  PEXUserPrivate.m
PhonexTests/: PEXAESCipherTest.m  PEXAuthCheckTest.m  PEXCertGenSOAPTest.m  PEXChunkInputStreamTest.m  PEXCopyInputStreamTest.m  PEXCryptoTest.m  PEXGeneratorTest.m  PEXGzipTest.m  PEXInputOutputFunctionStream.m  PEXMemBioTest.m  PEXMergedInputStreamTest.m  PEXMessageDigestTest.m  PEXMultipartInputStreamTest.m  PEXOpenUDIDTest.m  PEXPEMParserTest.m  PEXPEMPasswdTest.m  PEXPKCS12PasswdTest.m  PEXPasswdGeneratorTest.m  PEXProtobufTest.m  PEXResTest.m  PEXSOAPTest.m  PEXScryptTest.m  PEXSecurityCenterTest.m  PEXSharedPrefsSaltTest.m  PhonexTests-Prefix.pch  PhonexTests.m
PhonexTests/Database/: PEXDatabaseTest.m  PEXDbProviderTest.m  PEXDbTestEntity.h  PEXDbTestEntity.m  PEXDbTestProvider.h  PEXDbTestProvider.m
PhonexTests/PriorityQueue/: PEXPriorityQueueTests.h  PEXPriorityQueueTests.m  PEXPriotityTestObject.h  PEXPriotityTestObject.m
Protobuf/: README_OSX  gen-osx.sh  gen.sh
Protobuf/pytools/: refactorProtoFiles.sh
dependency/RMStore/RMStore/: RMStore.h  RMStore.m
dependency/XMPPFramework/: _build.txt
dependency/openssl-ios/: build-libssl.sh  openssl-build.sh
dependency/pjproject/: Makefile  PATCHING.md  UPDATE.txt  _build.sh  _buildMulti.sh  _cleanMulti.sh  _copy.sh  _thirdTest.sh  clean-source.sh  rsync-last.sh  sources
dependency/pjproject/_source/: CMakeLists.txt
dependency/pjproject/configuration/: config_site.h
dependency/pjproject/patches/: 000android_os.diff  002pjsip-webrtc-aec.diff  003rtp_type_strip.diff  006no_update_option.diff  008sdp_in_options.diff  010os_unix_joining_self.diff  011add_vpx_type.h  013ignore_stun_failure_transport_creation.diff  100asserts.diff  101terminate_call.diff  103_fix_reregtimer_shutdown.diff  105stun_tsx_fix.diff  107parser.diff  108debuglog.diff  109contactrewriteport.diff  110ssldefault.diff  111removingJniOnLoad.diff  112assertLogs.diff  113iceBlacklist.diff  114regtimeout.diff  115gruu.diff  116gruu.diff  122reg_backoff.diff  123stun_async.diff  127security_fixes01.diff  128coverity_fixes02.diff  130ipv6.diff  131stun-ipv6.diff  132turn-ipv6.diff  133too_many_log.diff  134ipv6_dns.diff  135vid_stun.diff  series
dependency/sqlcipher/: _build.txt
dependency/zrtpcpp/: _Makefile  _build.sh
obfuscation/: notes.txt
trunk/Phonex/: Phonex-Info.plist  Phonex-Prefix.pch  main.m
trunk/Phonex.xcodeproj/: project.pbxproj
trunk/Phonex/Base.lproj/: Main_iPhone.storyboard
trunk/Phonex/Source/: PEXAppDelegate.h  PEXAppDelegate.m
trunk/PhonexTests/: PhonexTests.m
(+1438 files in other folders)
